# terapi

./: .gitignore  BUILDER.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  USAGE.md  api-test.txt  demo.json  terapi-env.sh  terapi-keymap.html
.terapi/collections/: 01-public-rest.toml  02-graphql.toml
examples/: auth_flow.toml  collection.toml  crates-io-updates-last-hour.toml  crud_demo.toml  debug_toolbox.toml  eu_capitals.toml  foreach_demo.toml  itineraire_demo.toml  seed_step_demo.toml  transform_demo.toml  users.toml  when_demo.toml
examples/campaigns/: bulk_invite.toml  contacts.csv  crates-io-updates-last-hour.toml  crud_demo.toml  eu_capitals.toml  eu_capitals_map.html  eu_capitals_weather.json  horaires_sncf_par_gare.toml  itineraire_demo.toml  json_connector_demo.toml  loop_pagination_demo.toml  nasa-neo-perf.toml  oauth2_test_procedure.md  spacex_exploration.toml  upload_demo.toml  users.json  users.toml
examples/collections/: bnf-catalogue.toml  bnf-gallica.toml  countries-graphql.toml  france-eau.toml  france-geo.toml  france-meteo.toml  geoplateforme-itineraire.toml  graphql.toml  public-rest.toml  rick-morty-graphql.toml  sncf.toml  spacex-graphql.toml  swapi-graphql.toml
src/: app.rs  campaign.rs  connector.rs  event.rs  json_highlight.rs  main.rs  storage.rs  ui.rs  xml_convert.rs
src/app/: campaigns_tab.rs  collections.rs  envs.rs  gql_completion.rs  http.rs  mod.rs  oauth2.rs  request.rs  response.rs  schema.rs  types.rs  var_picker.rs
src/builder/: browser.rs  checker.rs  editor.rs  mod.rs  step_editor.rs  types.rs  ui.rs
src/import/: insomnia.rs  mod.rs  postman.rs
